# sieve

./: .gitignore  pyproject.toml  test_hn.py
.cursor/: rules  rules.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/sieve/: main.py
src/sieve/collectors/: hackernews.py  twitter.py
src/sieve/core/: agent.py  config.py  types.py
src/sieve/db/: models.py
src/sieve/services/: collector.py  emailer.py
tests/: test_hn.py
